Remove Post Notification

--- a/upload/catalog/view/theme/default/template/extension/payment/paysafecash_redirect.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/paysafecash_redirect.twig
@@ -1,5 +1,5 @@
 <h2>{{ payment_title }}</h2>
-<p>{{ confirm_description }}</p>
+<p>{{ payment_description }}</p>
 <div class="buttons">
     <div class="pull-right">
         <a href="{{ redirect_url }}" title="{{ button_proceed }}" class="btn btn-primary">{{ button_proceed }}</a>
